[RRFS_baseline] Adding scripts for calculating and plotting 2d histograms for gridded variables (#630)

--- a/ush/templates/parm/metplus/GridDiag_2vars.conf
+++ b/ush/templates/parm/metplus/GridDiag_2vars.conf
@@ -51,19 +51,19 @@ MODEL = {ENV[MODEL]}
 # Configuration file
 GRID_DIAG_CONFIG_FILE = {CONFIG_DIR}/GridDiagConfig
 
-BOTH_VAR1_NAME = REFC 
-BOTH_VAR1_LEVELS = L0
-BOTH_VAR1_OPTIONS = cnt_thresh = [ >15 ]; n_bins = 90; range  = [-20, 70];
+BOTH_VAR1_NAME = {ENV[VAR1]}
+BOTH_VAR1_LEVELS = {ENV[VAR1_LEV]}
+BOTH_VAR1_OPTIONS = {ENV[VAR1_OPTS]}
 
-BOTH_VAR2_NAME = MergedReflectivityQCComposite
-BOTH_VAR2_LEVELS = Z500 
-BOTH_VAR2_OPTIONS = censor_thresh = lt-20.0; censor_val = -20.0; cnt_thresh = [ >15 ]; n_bins = 90; range  = [-20, 70];
+BOTH_VAR2_NAME = {ENV[VAR2]}
+BOTH_VAR2_LEVELS = {ENV[VAR2_LEV]}
+BOTH_VAR2_OPTIONS = {ENV[VAR2_OPTS]}
 
 # The following variables set values in the MET
 # configuration file used by this example
 # Leaving these values commented will use the value
 # found in the default MET configuration file
-GRID_DIAG_REGRID_TO_GRID = /scratch2/BMC/fv3lam/RRFS_baseline/static/MET/masks/CONUS.nc 
+GRID_DIAG_REGRID_TO_GRID = /scratch1/BMC/hmtb/beck/jtti/static/MET/met_config/masks/CONUS.nc
 #GRID_DIAG_REGRID_METHOD = BUDGET 
 #GRID_DIAG_REGRID_WIDTH = 2 
 #GRID_DIAG_REGRID_VLD_THRESH = 0.5
@@ -79,14 +79,17 @@ GRID_DIAG_OUTPUT_DIR = {OUTPUT_BASE}
 
 [filename_templates]
 
-#GRID_DIAG_INPUT_TEMPLATE = expt_dirs/RRFS_baseline_summer/{init?fmt=%Y%m%d%H}/postprd/{ENV[NET]}.t{init?fmt=%H}z.bgdawpf{lead?fmt=%HHH}.tm{init?fmt=%H}.grib2, obs_data/mrms/proc/{valid?fmt=%Y%m%d}/MergedReflectivityQCComposite_00.50_{valid?fmt=%Y%m%d}-{valid?fmt=%H}0000.grib2
-GRID_DIAG_INPUT_TEMPLATE = expt_dirs/RRFS_baseline_{SEASON}/{init?fmt=%Y%m%d%H}/postprd/{ENV[NET]}.t{init?fmt=%H}z.bgdawpf{lead?fmt=%HHH}.tm{init?fmt=%H}.grib2, obs_data/mrms/proc/{valid?fmt=%Y%m%d}/MergedReflectivityQCComposite_00.50_{valid?fmt=%Y%m%d}-{valid?fmt=%H}0000.grib2
+#RRFSE_CONUS.t00z.bgdawpf036.tm00.grib2
+#EchoTop_18_00.50_20191201-010000.grib2
+#MergedReflectivityQCComposite_00.50_20191201-010000.grib2
+#GRID_DIAG_INPUT_TEMPLATE = expt_dirs/RRFS_baseline_{SEASON}/{init?fmt=%Y%m%d%H}/postprd/{ENV[NET]}.t{init?fmt=%H}z.bgdawpf{lead?fmt=%HHH}.tm{init?fmt=%H}.grib2, expt_dirs/RRFS_baseline_{SEASON}/{init?fmt=%Y%m%d%H}/postprd/{ENV[NET]}.t{init?fmt=%H}z.bgdawpf{lead?fmt=%HHH}.tm{init?fmt=%H}.grib2
+GRID_DIAG_INPUT_TEMPLATE = data/{init?fmt=%Y%m%d%H}/mem1/postprd/{ENV[NET]}.t{init?fmt=%H}z.bgdawpf{lead?fmt=%HHH}.tm{init?fmt=%H}.grib2
 
-GRID_DIAG_OUTPUT_TEMPLATE = grid_diag_out_{MODEL}_{BOTH_VAR1_NAME}-obs_{ENV[INIT_BEG]}-{ENV[INIT_END]}_f{ENV[FHR_FIRST]}-{ENV[FHR_LAST]}.nc
+GRID_DIAG_OUTPUT_TEMPLATE = grid_diag_out_{MODEL}_{ENV[VAR1]}_{ENV[VAR1_LEV]}-{ENV[VAR2]}_{ENV[VAR2_LEV]}_{ENV[INIT_BEG]}-{ENV[INIT_END]}_f{ENV[FHR_FIRST]}-{ENV[FHR_LAST]}.nc
 #when using RUN_ONCE
 #GRID_DIAG_OUTPUT_TEMPLATE = grid_diag_out_{MODEL}_{init?fmt=%Y%m%d%H}.nc when using RUN_ONCE_PER_INIT_OR_VALID
 #GRID_DIAG_OUTPUT_TEMPLATE = grid_diag_out_{MODEL}_{lead?fmt=%3H}.nc
 # when using RUN_ONCE_PER_LEAD
 #GRID_DIAG_OUTPUT_TEMPLATE = grid_diag_out_{MODEL}_{init?fmt=%Y%m%d%H}_F{lead?fmt=%3H}.nc when using RUN_ONCE_FOR_EACH
 
-GRID_DIAG_VERIFICATION_MASK_TEMPLATE = /scratch2/BMC/fv3lam/RRFS_baseline/static/MET/masks/CONUS.nc
+GRID_DIAG_VERIFICATION_MASK_TEMPLATE = /scratch1/BMC/hmtb/beck/jtti/static/MET/met_config/masks/CONUS.nc
