--- a/ush/templates/parm/metplus/GridDiag_RETOP.conf
+++ b/ush/templates/parm/metplus/GridDiag_RETOP.conf
@@ -51,13 +51,13 @@ MODEL = {ENV[MODEL]}
 # Configuration file
 GRID_DIAG_CONFIG_FILE = {CONFIG_DIR}/GridDiagConfig
 
-BOTH_VAR1_NAME = REFC 
+BOTH_VAR1_NAME = RETOP 
 BOTH_VAR1_LEVELS = L0
-BOTH_VAR1_OPTIONS = cnt_thresh = [ >15 ]; n_bins = 90; range  = [-20, 70];
+BOTH_VAR1_OPTIONS = convert(x) = x * 3.28084 * 0.001; n_bins = 60; range  = [0, 60];
 
-BOTH_VAR2_NAME = MergedReflectivityQCComposite
+BOTH_VAR2_NAME = EchoTop18
 BOTH_VAR2_LEVELS = Z500 
-BOTH_VAR2_OPTIONS = censor_thresh = lt-20.0; censor_val = -20.0; cnt_thresh = [ >15 ]; n_bins = 90; range  = [-20, 70];
+BOTH_VAR2_OPTIONS = convert(x) = x * 3280.84 * 0.001; censor_thresh = [<=-9.84252,eq-3.28084]; censor_val = [-9999,-16.4042]; n_bins = 60; range  = [0, 60];
 
 # The following variables set values in the MET
 # configuration file used by this example
@@ -79,10 +79,11 @@ GRID_DIAG_OUTPUT_DIR = {OUTPUT_BASE}
 
 [filename_templates]
 
-#GRID_DIAG_INPUT_TEMPLATE = expt_dirs/RRFS_baseline_summer/{init?fmt=%Y%m%d%H}/postprd/{ENV[NET]}.t{init?fmt=%H}z.bgdawpf{lead?fmt=%HHH}.tm{init?fmt=%H}.grib2, obs_data/mrms/proc/{valid?fmt=%Y%m%d}/MergedReflectivityQCComposite_00.50_{valid?fmt=%Y%m%d}-{valid?fmt=%H}0000.grib2
-GRID_DIAG_INPUT_TEMPLATE = expt_dirs/RRFS_baseline_{SEASON}/{init?fmt=%Y%m%d%H}/postprd/{ENV[NET]}.t{init?fmt=%H}z.bgdawpf{lead?fmt=%HHH}.tm{init?fmt=%H}.grib2, obs_data/mrms/proc/{valid?fmt=%Y%m%d}/MergedReflectivityQCComposite_00.50_{valid?fmt=%Y%m%d}-{valid?fmt=%H}0000.grib2
+#EchoTop_18_00.50_20191201-010000.grib2
+#MergedReflectivityQCComposite_00.50_20191201-010000.grib2
+GRID_DIAG_INPUT_TEMPLATE = expt_dirs/RRFS_baseline_{SEASON}/{init?fmt=%Y%m%d%H}/postprd/{ENV[NET]}.t{init?fmt=%H}z.bgdawpf{lead?fmt=%HHH}.tm{init?fmt=%H}.grib2, obs_data/mrms/proc/{valid?fmt=%Y%m%d}/EchoTop_18_00.50_{valid?fmt=%Y%m%d}-{valid?fmt=%H}0000.grib2
 
-GRID_DIAG_OUTPUT_TEMPLATE = grid_diag_out_{MODEL}_{BOTH_VAR1_NAME}-obs_{ENV[INIT_BEG]}-{ENV[INIT_END]}_f{ENV[FHR_FIRST]}-{ENV[FHR_LAST]}.nc
+GRID_DIAG_OUTPUT_TEMPLATE = grid_diag_out_{MODEL}_{ENV[INIT_BEG]}-{ENV[INIT_END]}_f{ENV[FHR_FIRST]}-{ENV[FHR_LAST]}.nc
 #when using RUN_ONCE
 #GRID_DIAG_OUTPUT_TEMPLATE = grid_diag_out_{MODEL}_{init?fmt=%Y%m%d%H}.nc when using RUN_ONCE_PER_INIT_OR_VALID
 #GRID_DIAG_OUTPUT_TEMPLATE = grid_diag_out_{MODEL}_{lead?fmt=%3H}.nc
